// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControls - default (no props) 1`] = `
<div>
  <div
    class="mb-1 flex flex-row"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2  text-text fill-text dark:text-primary dark:fill-primary size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class=" accent-primary ml-2 w-full"
      type="range"
      value="50"
    />
  </div>
</div>
`;

exports[`VolumeControls - explicitly passing setVolume as undefined 1`] = `
<div>
  <div
    class="mb-1 flex flex-row"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2  text-text fill-text dark:text-primary dark:fill-primary size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class=" accent-primary ml-2 w-full"
      type="range"
      value="50"
    />
  </div>
</div>
`;

exports[`VolumeControls - loading state (controls visually disabled) 1`] = `
<div>
  <div
    class="mb-1 flex flex-row"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2 opacity-50 text-text fill-text dark:text-primary dark:fill-primary size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class="pointer-events-none opacity-50 accent-primary ml-2 w-full"
      readonly=""
      type="range"
      value="50"
    />
  </div>
</div>
`;

exports[`VolumeControls - loading true with setVolume provided 1`] = `
<div>
  <div
    class="mb-1 flex flex-row"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2 opacity-50 text-text fill-text dark:text-primary dark:fill-primary size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class="pointer-events-none opacity-50 accent-primary ml-2 w-full"
      readonly=""
      type="range"
      value="50"
    />
  </div>
</div>
`;

exports[`VolumeControls - with setVolume callback provided 1`] = `
<div>
  <div
    class="mb-1 flex flex-row"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2  text-text fill-text dark:text-primary dark:fill-primary size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class=" accent-primary ml-2 w-full"
      type="range"
      value="50"
    />
  </div>
</div>
`;
